<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/instructionsbg2"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructionsheader"
            android:textSize="30sp"
            android:textColor="#FFF9FD" 
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructions"
            android:textSize="20sp" 
            android:textColor="#FFF9FD"/>

         <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructionsheader2"
            android:textSize="20sp" 
            android:textStyle="italic"
            android:textColor="#FFF9FD"/>
          <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructions2"
            android:textSize="20sp"
            android:textColor="#FFF9FD" />
          <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructionsheader3"
            android:textSize="20sp" 
            android:textStyle="italic"
            android:textColor="#FFF9FD"/>
          <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructions3"
            android:textSize="20sp" 
            android:textColor="#FFF9FD"/>
          <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructionsheader4"
            android:textSize="20sp"
            android:textStyle="italic" 
            android:textColor="#FFF9FD"/>
          <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructions4"
            android:textSize="20sp"
            android:textColor="#FFF9FD" />
           <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructionsheader5"
            android:textSize="20sp"
            android:textStyle="italic" 
            android:textColor="#FFF9FD"/>
           <TextView
            android:id="@+id/textView10"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center|center_vertical"
            android:text="@string/instructions5"
            android:textSize="20sp"
            android:textColor="#FFF9FD"
             />

    </LinearLayout>
    

</ScrollView>
